Updated with project

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <p>Welcome to my portfolio! Below are some of the projects I've worked on.</p>
         <div class="project">
           <div class="project-details">
-            <h3>Surf Report</h3>
-            <p>A web app that provides surf conditions for various locations, created using the MERN Stack.</p>
-            <img src="Assets\surf.jpg" alt="Surf Report" class="project-image">
+            <a href="https://kcgswagg.github.io/sports-tracker/index.html"><h3>Sports Tracker App</h3></a>
+            <p>In this app, users can browse through upcoming baseball and soccer matches and choose the team they believe will emerge as the winner.</p>
+            <img src="Assets\sports-tracker-pic.png" alt="Sports Tracker" class="project-image">
           </div>
         </div>
         <div class="project">
