--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <p>Welcome to my portfolio! Below are some of the projects I've worked on.</p>
         <div class="project">
           <div class="project-details">
-            <a href="https://kcgswagg.github.io/sports-tracker/index.html"><h3>Sports Tracker App</h3></a>
-            <p>In this app, users can browse through upcoming baseball and soccer matches and choose the team they believe will emerge as the winner.</p>
-            <img src="Assets\sports-tracker-pic.png" alt="Sports Tracker" class="project-image">
+            <a href="https://sdavi222.github.io/movie-recommender"><h3>Movie Recommender App</h3></a>
+            <p>This is a web application that allows users to generate random movie recommendations based on different genres..</p>
+            <img src=""C:\Users\sethd\OneDrive\Pictures\Screenshots\mov rec pic.png"" alt="Movie recommender" class="project-image">
           </div>
         </div>
         <div class="project">
