--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="project-details">
             <a href="https://sdavi222.github.io/movie-recommender"><h3>Movie Recommender App</h3></a>
             <p>This is a web application that allows users to generate random movie recommendations based on different genres..</p>
-            <img src=""C:\Users\sethd\OneDrive\Pictures\Screenshots\mov-rec-pic.png"" alt="Movie recommender" class="project-image">
+            <img src="assets/mov-rec-pic.png" alt="Movie recommender" class="project-image">
           </div>
         </div>
         <div class="project">
