--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
             My interest in technology has always been present<br> but it was recently that I decided to take an initiative with
             pursuing a career in coding. Along this journey, I have been enjoying learning different techniques<br> to continuously improving 
             my programming skills.
-             
-                </p>
+             </p>
 	</section>
-
       <section id="projects">
         <h2>My Projects</h2>
         <p>Welcome to my portfolio! Below are some of the projects I've worked on.</p>
@@ -37,34 +35,19 @@
         </div>
         <div class="project">
           <div class="project-details">
-            <h3>Calculator</h3>
-            <p>A simple calculator application created with React, CSS, and JavaScript.</p>
-            <img src="Assets\calculator.jpg" alt="Calculator" class="project-image">
+            <a href="https://kcgswagg.github.io/sports-tracker/index.html"><h3>Sports Tracker App</h3></a>
+            <p>This website will allow you to track past and upcoming games for the top baseball and soccer teams.</p>
+            <img src="Assets/sports-tracker-pic.png" alt="Sports Tracker App" class="project-image">
           </div>
-        </div>
+        </div> 
+
         <div class="project">
           <div class="project-details">
-            <h3>LED Wall</h3>
-            <p>A project that involves controlling an LED display using Node and ioT technology.</p>
-            <img src="Assets\led wall.jpg" alt="LED Wall" class="project-image">
+            <a href="https://sdavi222.github.io/weather-dashboard/"><h3>Weather Dashboard App</h3></a>
+            <p>Description of your Weather Dashboard App.</p>
+            <img src="Assets/weather-dashboard-pic.png" alt="Weather Dashboard App" class="project-image">
           </div>
         </div>
-        <div class="project">
-          <div class="project-details">
-            <h3>Run Buddy</h3>
-            <p>A website for a fictional fitness company, created with HTML and CSS.</p>
-            <img src="Assets\run buddy.jpg" alt="Run Buddy" class="project-image">
-          </div>
-        </div>
-        <div class="project">
-          <div class="project-details">
-            <h3>Pastel Puzzles</h3>
-            <p>An interactive puzzle game created using the MERN Stack.</p>
-            <img src="Assets\puzzels.png" class="project-image">
-          </div>
-        </div>
-      </section>
-      
 	<section id="contact">
 		<h2>Contact Me</h2>
 		<p>704-608-3393</p>
