Updated index.html with linkedin

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 	<section id="about">
 		<h2>About Me</h2>
 		<p> Hello! My name is Seth Davis, and I am a skilled and passionate web developer from Charlotte, NC.
-            My interest in technology has always been present<br> but it was recently that I decided to take an initiative with
-            pursuing a career in coding. Along this journey, I have been enjoying learning different techniques<br> to continuously improving 
-            my programming skills.
+            I've actively embarked on this journey of coding and I am enjoying every bit of it.<br>
+             Engaging in diverse techniques and consistently honing my programming skills has been a fulfilling and rewarding experience.
              </p>
 	</section>
       <section id="projects">
@@ -53,10 +52,10 @@
 		<p>704-608-3393</p>
         <p>sethdavi224@gmail.com</p>
         <a href="https://github.com/sdavi222">Github</a><br>
-        <a href="">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/seth-davis-3b2581242/">LinkedIn</a>
 	</section>
 	<footer>
-		<p>Copyright © 	Seth Davis' Portfolio</p>
+		<p></p>
 	</footer>
 </body>
 </html>
